--- a/Angular app/src/app/user/upcomingevents/upcomingevents.component.html
+++ b/Angular app/src/app/user/upcomingevents/upcomingevents.component.html
@@ -1,6 +1,6 @@
 <table class="booking-history-table">
     <thead>
-      <tr>
+      <!-- <tr>
         <th>S.No</th>
         <th>Booking Id</th>
         <th>Event Name</th>
@@ -10,12 +10,23 @@
         <th>Total Cost</th>
         <th>Payment Status</th>
         <th>Options</th>
+      </tr> -->
+      <tr>
+        <th>S.No</th>
+        <th>Event Id</th>
+        <th>Event Name</th>
+        <th>Start DateTime</th>
+        <th>End DateTime</th>
+        <th>Location</th>
+        <th>Total Cost</th>
+        <th>Payment Status</th>
+        <th>Options</th>
       </tr>
     </thead>
     <tbody>
-      <ng-container *ngFor="let booking of upcomingevent;let ioe=index">
+      <!-- <ng-container *ngFor="let booking of upcomingevent;let ioe=index">
         <tr *ngIf="booking.paymentStatus !='Refundstatus'">
-        <td>{{ booking.sno }}</td>
+        <td>{{ booking.ticketId }}</td>
         <td>{{ booking.bookingId }}</td>
         <td>{{ booking.eventName }}</td>
         <td>{{ booking.venue }}</td>
@@ -25,6 +36,22 @@
         <td>{{ booking.paymentStatus }}</td>
         <td>
           <button (click)="cancelEvent(booking.bookingId,ioe)">Cancel Event</button>
+        </td>
+        </tr>
+    </ng-container> -->
+
+      <ng-container *ngFor="let booking of upcomingeventslist;let ioe=index">
+        <tr *ngIf="booking.status =='booked'">
+        <td>{{ ioe+1 }}</td>
+        <td>E{{ booking.event.id }}</td>
+        <td>{{ booking.event.name }}</td>
+        <td>{{ booking.event.startDate | dateTimePipe}}</td>
+        <td>{{ booking.event.endDate | dateTimePipe}}</td>
+        <td>{{ booking.event.location }}</td>
+        <td>{{ booking.event.price }}</td>
+        <td>{{ booking.status }}</td>
+        <td>
+          <button (click)="cancelTicket(booking.id,booking)">Cancel Event</button>
         </td>
         </tr>
     </ng-container>
