admin part integrated except ticket

--- a/Angular app/src/app/admin/admin_components/ticket/ticket-nav/ticket-date-filter/ticket-date-filter.component.css
+++ b/Angular app/src/app/admin/admin_components/ticket/ticket-nav/ticket-date-filter/ticket-date-filter.component.css
@@ -37,10 +37,16 @@ input{
     top: -18px;
     right: 10px;
     width: 118%;
+    border-radius: 10px;
+    border: 2px greenyellow solid;
 }
 .default{
     padding-top: 10px;
     margin: 0 auto;
     width: 180px;
     padding-bottom: 20px;
+}
+h4{
+    position: relative;
+    top: 5px;
 }
