--- a/Angular app/src/app/admin/admin_components/event-listing/a-event-detail/a-event-detail.component.html
+++ b/Angular app/src/app/admin/admin_components/event-listing/a-event-detail/a-event-detail.component.html
@@ -41,7 +41,9 @@
                 </div>
                 <div class="form-group">
                     <label for="capacity">Capacity of Participants in head count</label>
-                    <div class="detail"><h5>{{event.totalTickets}}</h5></div>
+                    <div class="detail" style="width: 200px;"><h5>{{event.totalTickets}}</h5>
+                        <a style="position: relative;top: -37px;left: 500px;" [routerLink]="'/admin/report/{{this.event.id}}'" class="btn-primary btn">Click here to get a detailed report about Event</a>
+                    </div>
                 </div>
         
             </form>
