--- a/Angular app/src/app/admin/admin_components/user-list/user-detail/user-detail.component.css
+++ b/Angular app/src/app/admin/admin_components/user-list/user-detail/user-detail.component.css
@@ -49,6 +49,12 @@
     background-color: rgb(226,227,229);
     
   }
+  .list-group-item:hover{
+    background-color: rgba(0, 0, 0,.2);
+  }
+  a:hover{
+    text-decoration: none;
+  }
 
   h5{
     position: relative;
